--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -32,6 +32,9 @@
 				<h2>W3matter - Goliath Base App</h2>
 				<p>Released on December 21, 2011</p>
 				<hr />
+				<%= yield %>
+				<hr />
+				<h2>Foundation CSS/HTML Framework</h2>
 			</div>
 		</div>
 
